--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "server": "nodemon index.js"
+    "server": "nodemon index.js",
+    "test":"cross-env DB_ENV=testing jest --watch --verbose"
+  },
+  "jest":{
+    "testEnvironment":"node"
   },
   "repository": {
     "type": "git",
@@ -20,12 +24,15 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^6.0.0",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "helmet": "^3.21.1",
+    "jest": "^24.9.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.4",
     "sqlite3": "^4.1.0",
+    "supertest": "^4.0.2",
     "twilio": "^3.35.0"
   },
   "devDependencies": {
